--- a/public/index.css
+++ b/public/index.css
@@ -1,5 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
-
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+    display: none !important;
+}
 *, *:after, *:before {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -38,7 +40,42 @@ pre {
     -moz-transition: all .3s;
     transition: all .3s;
 }
-#active-card {
+#content {
+    position: absolute;
+}
+.card>#like {
+    position: absolute;
+    left: 10%;
+    top: 10%;
+    text-transform: uppercase;
+    border: 3px solid;
+    padding: .4em;
+    font-size: 2.25em;
+    border-radius: 5px;
+    transform: rotate(-10deg);
+    color: #63DE9A;
+    font-weight: bolder;
+    font-family: "Arial";
+}
+.card>#nope {
+    position: absolute;
+    right: 10%;
+    top: 10%;
+    text-transform: uppercase;
+    border: 3px solid;
+    padding: .4em;
+    font-size: 2.25em;
+    border-radius: 5px;
+    transform: rotate(10deg);
+    color: #EE6C49;
+    font-weight: bolder;
+    font-family: "Arial";
+}
+#like, #nope {
+    opacity: .25;
+}
+.card {
+    position: absolute;
     background: #fff;
     width: 300px;
     height: 300px;
@@ -46,12 +83,20 @@ pre {
     border: 1px solid #ddd;
     border-radius: 5px;
 }
-.profile-pic {
+.card>.pic {
     height: 90%;
     overflow: hidden;
 }
-.profile-info {
-    display: inline-block;
+.card>.info {
     width: 100%;
     background: #fff;
+}
+.btn {
+    border: 1px solid #4986e7;
+    border-radius: 3px;
+    padding: .5em;
+    cursor: pointer;
+}
+.lower-card {
+
 }
