--- a/public/index.css
+++ b/public/index.css
@@ -102,7 +102,7 @@ pre {
     width: 100%;
     background: #fff;
     font-size: 1.5em;
-    margin-left: 15px;
+    padding-left: 15px;
     color: #555;
     font-family: 'ArialRounded';
     height: 42px;
