--- a/public/index.css
+++ b/public/index.css
@@ -93,10 +93,14 @@ pre {
     overflow: hidden;
 }
 .profile-pic>img {
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
     margin: 0 auto;
     display: block;
+    object-fit: cover;
+    overflow: hidden;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 .card>.info {
     width: 100%;
@@ -136,4 +140,87 @@ pre {
 }
 .hidden {
     visibility: hidden;
+}
+#meet-me-modal {
+    position: fixed;
+    font-family: Arial, Helvetica, sans-serif;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 99999;
+    opacity:0;
+    -webkit-transition: opacity 400ms ease-in;
+    -moz-transition: opacity 400ms ease-in;
+    transition: opacity 400ms ease-in;
+    pointer-events: none;
+}
+#meet-me-modal.active {
+    opacity:1;
+    pointer-events: auto;
+}
+#meet-me-modal>.heading {
+    text-align: center;
+    font-size: 4em;
+    color: #fff;
+    font-family: 'ArialRound';
+    padding-top: 1em;
+    display: inline-table;
+    width: 100%;
+}
+#meet-me-modal>.description {
+    text-align: center;
+    font-size: 18px;
+    color: #fff;
+    font-family: Arial;
+    padding-top: 1em;
+}
+#meet-me-modal>#icons {
+    text-align: center;
+    margin-top: 20px;
+}
+#meet-me-modal>#icons>div {
+    display: inline-block;
+}
+#meet-me-modal>#icons>div>img {
+    border-radius: 100%;
+    border: 5px solid #fff;
+    object-fit: cover;
+    overflow: hidden;
+    width: 125px;
+    height: 125px;
+}
+#meet-me-modal>#icons>.user>img {
+    margin-right: 5px;
+}
+#meet-me-modal>#icons>.matched-user>img {
+    margin-left: 5px;
+}
+#meet-me-modal>.footer {
+    bottom: 0;
+    position: fixed;
+    width: 100%;
+}
+#meet-me-modal>.footer>div {
+    display: flex;
+    text-align: center;
+}
+#meet-me-modal>.footer .btn {
+    background-color: #fff;
+    border: 1px solid #707070;
+    color: #707070;
+    padding: .5em 1em;
+    font-size: 1.25em;
+    margin: 0 auto;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    font-family: 'ArialRounded';
+    width: 12em;
+}
+#meet-me-modal>.footer .link {
+    color: #fff;
+    font-size: 1.25em;
+    margin: 10px auto 20px;
+    font-family: sans-serif;
 }
