--- a/public/index.css
+++ b/public/index.css
@@ -22,6 +22,10 @@
     box-sizing: border-box;
     -moz-box-sizing: border-box;
 }
+body {
+    overflow: hidden !important;
+    position: static !important;
+}
 html, body {
     margin: 0;
     padding: 0;
