--- a/public/index.css
+++ b/public/index.css
@@ -22,8 +22,8 @@
     box-sizing: border-box;
     -moz-box-sizing: border-box;
 }
-body {
-    overflow: hidden !important;
+body.modal-open {
+    overflow: hidden;
 }
 html, body {
     margin: 0;
