--- a/public/index.css
+++ b/public/index.css
@@ -22,6 +22,10 @@
     box-sizing: border-box;
     -moz-box-sizing: border-box;
 }
+body {
+    overflow: hidden;
+    position: fixed;
+}
 html, body {
     margin: 0;
     padding: 0;
@@ -126,13 +130,13 @@ pre {
 }
 .card {
     position: absolute;
-    /*background: #45B2FF;*/
     background: #fff;
     width: 300px;
     height: 300px;
     padding: 0;
     border: 1px solid #f0f0f0;
     border-radius: 5px;
+    z-index: 1;
 }
 .card>.profile-pic {
     height: 90%;
@@ -276,6 +280,7 @@ pre {
     bottom: 0;
     text-align: center;
     padding-bottom: 10px;
+    z-index: -1;
 }
 #buttons>div {
     display: inline-block;
